fix image display on mobile

--- a/rnow/src/components/current_subject/index.scss
+++ b/rnow/src/components/current_subject/index.scss
@@ -3,16 +3,22 @@
     flex-direction: column;
     justify-content: space-between;
 
-    height: 280px;
+    height: 270px;
     width: 100vw;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    background-size: cover;
+    //border-bottom-left-radius: 30px;
+    //border-bottom-right-radius: 30px;
+
+    //background: #000 !important;
+    background-size: 100%;
     background-position: top;
     background-repeat: no-repeat;
+    //background-attachment:fixed;
+
 
     color: white;
-    padding: 20px;
+    padding: 30px 20px;
+    padding-bottom: 40px;
+
 
     header {
         display: flex;
